# fedpaste

./: ChangeLog.md  LICENSE  README.md  Web-Modernpaste-Client.html  Web-Modernpaste-Types.html  doc-index.html  fpasteng.cabal  fpasteng.haddock  index.html  mini_Web-Modernpaste-Client.html  mini_Web-Modernpaste-Types.html  modern-paste.cabal
doc/: manpage.md
scripts/: ghpages-haddock.sh
src/Web/Modernpaste/: Client.hs  Types.hs
src/exe/: Fedpaste.hs  Language.hs  Shorten.hs  Sysinfo.hs
