name:                modern-paste
version:             0.1.0.0
synopsis:            A library for accessing the modern-paste API
-- description:
homepage:            https://github.com/relrod/fpasteng
license:             MIT
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2017 Red Hat, Inc.
category:            Fedora
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

library
  exposed-modules:     Web.Modernpaste.Client
                     , Web.Modernpaste.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5
                     , aeson >= 1 && < 2
                     , bytestring >= 0.10 && < 0.11
                     , http-client >= 0.5 && < 1
                     , http-client-tls >= 0.3 && < 1
                     , http-types >= 0.8 && < 0.10
                     , mtl >= 2 && < 3
                     , shelly >= 1.4 && < 2
                     , text >= 1 && < 2
                     , time >= 1.5 && < 2
                     , transformers >= 0.4 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable fedpaste
  build-depends:       base >= 4 && < 5
                     , aeson >= 1 && < 2
                     , bytestring >= 0.10 && < 0.11
                     , directory >= 1.2 && < 2
                     , http-client >= 0.5 && < 1
                     , http-client-tls >= 0.3 && < 1
                     , http-types >= 0.8 && < 1
                     , mtl >= 2 && < 3
                     , optparse-applicative >= 0.11 && < 1
                     , shelly >= 1.4 && < 2
                     , text >= 1 && < 2
                     , time >= 1.5 && < 2
                     , transformers >= 0.4 && < 0.6
                     , modern-paste
  hs-source-dirs:      src/exe
  default-language:    Haskell2010
  main-is:             Fedpaste.hs
  other-modules:       Language, Shorten, Sysinfo